deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: __JOEL_DEPLOYMENT_NAME__
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: __JOEL_APP_LABEL__
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: __JOEL_CONTAINER_NAME__
          image: __IMAGE_NAME__
          ports:
            - containerPort: 80
